webserver/container/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: images
  labels:
    ext-secret-registry-conf: "true"
    ext-secret-ssh-dir: "true"
