webserver/container/manifests/webserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  annotations:
    image.openshift.io/triggers: |
      [
       {
         "from": {
           "kind": "ImageStreamTag", 
           "name": "webserver-remote:latest" 
         },
         "fieldPath": "spec.template.spec.containers[0].image", 
         "paused": false 
       }
      ]
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: webserver-remote
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
          initialDelaySeconds: 2
          periodSeconds: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
          initialDelaySeconds: 2
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  selector:
    app: webserver
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  host: webserver-build.ocp.straubcloud.de
  to:
    kind: Service
    name: webserver
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
